# thai-travel-share

./: .gitignore  pyproject.toml
scripts/: run-api-dev
tests/: conftest.py  test_api.py
thaitravelshare/: main.py
thaitravelshare/core/: database.py  deps.py  security.py
thaitravelshare/models/: __init__.py  travel_model.py  user_model.py
thaitravelshare/routers/v1/: __init__.py  province_router.py  system_router.py  travel_router.py  user_router.py
thaitravelshare/schemas/: __init__.py  common_schemas.py  endpoint_schemas.py  province_schemas.py  travel_schemas.py  user_schemas.py
